Update HTML structure and styles in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
             margin-top: 30px;
         }
 
-        .card {
+        .metric-card {
             flex: 1 1 200px;
             background: #1e293b;
             padding: 20px;
@@ -109,4 +109,5 @@
 </div>
 
 </body>
+
 </html>
